syntax = "proto3";

package currency;

option go_package = "currency_converter/proto";

service CurrencyConverter {
  rpc ConvertCurrency (ConvertRequest) returns (ConvertResponse);
}

message Money {
  double amount = 1;
  string currency = 2;
}

message ConvertRequest {
  Money money = 1;
  string to_currency = 2;
}

message ConvertResponse {
  Money converted_money = 1;
}
